--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,6 @@
-import 
 html {
   box-sizing: border-box;
-  height: 100%;
+height: 100%;
 }
 *,
 *:before,
@@ -16,33 +15,18 @@ body {
   height: 100%;
 }
 
-span {
-  /* display: block; */
-  position: relative;
-  transform-origin: center center;
-  /* background-color: #f00; */
-  /* width:100%; */
-}
-
 #container {
   position: relative;
   background-color: rgb(228, 228, 228);
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-  /*  */
-  /* backface-visibility: hidden; */
-  /* Set the scene perspective both lines go together */
-  perspective: 450px;
-  /* perspective-origin: 88% 55%; */
 }
 
 #origin {
-  position: absolute;
-  left: 50%;
-  top:  50%;
-  /* transform-origin: 0 0; */
-  transform-style: preserve-3d;
+  position: absolute; /* << */
+  left: 50%; /* << */
+  top:  50%; /* << */
 }
 /* #origin::after{
   content:" ";
@@ -53,15 +37,30 @@ span {
   left: -2.5px;
   top: -2.5px;
 } */
-
+#camera{
+  transform-origin: 0 0; /* << */
+  /* backface-visibility: hidden; */
+  /* Set the scene perspective both lines go together */
+  perspective: 450px;
+  /* perspective-origPin: 88% 55%; */
+  transform-style: preserve-3d; /* << */
+  /* 4 DEBUGGING */
+  transform:rotate3d( 1, 0, 0, -90deg);/*top*/
+  transform:rotate3d( 0, 1, 0, -90deg);/*side*/
+  transform:rotate3d( 0, 1, 0, 0);/*none*/
+}
+#world{
+  transform-style: preserve-3d;
+}
 .ddd{
   position: absolute;
   transform-origin: 0 0;
   transform-style: preserve-3d;
   /* background-color: saddlebrown; */
-  
 }
-
+.ddd span{
+  display: inline-block;
+}
 .dddContainer {
   transform: translate3d(-50%, -50%, 0) ;
   position: relative;
@@ -70,10 +69,6 @@ span {
   align-items: center;
   justify-content: center;
   /*  */
-  /* padding: 1rem; */
-
-  /* transform-style: preserve-3d; */
-  
   /* background-color: rgba(15, 139, 71, 0.5); */
 }
 #grid {
@@ -81,10 +76,11 @@ span {
   background-color: rgb(0, 0, 0);
   backface-visibility: hidden;
   opacity: 0.1;
-  transform: translate3d(-50%, -50%, 0);
-  /* transform: translate3d( 0, 0, -444px); */
-  /* left:-50%; */
-  /* top:-50%; */
+  
+  transform-origin: 0 0; /* << */
+  transform:rotate3d( 1, 0, 0, 90deg) translate3d(-50%, -50%, 0);/* XZ top*/
+  transform:rotate3d( 0, 1, 0, 90deg) translate3d(-50%, -50%, 0);/* YZ side*/
+  transform: translate3d(-50%, -50%, 0);/*default*/
   width: 200px;
   height: 200px;
   background-image: linear-gradient(white 1px, transparent 1px),
@@ -95,24 +91,9 @@ span {
   background-position: -0.5px -0.5px, -0.5px -0.5px, -1px -1px, -1px -1px;
 }
 
-.frame {
-  /* background-color: hsla(354, 91%, 4%, 0.5); */
-  border: solid 10px #360000;
-  opacity: 1;
-  width: 220px;
-  height: 100px;
-}
-.label {
-  color: rgb(26, 21, 4);
-  /* background-color: hsla(354, 91%, 4%, 0.5); */
-  
-  /* width: 220px; */
-  /* height: 100px; */
-  line-break: 8rem;
-  font-size: 8rem;
-  font-family: "Serif";
-  font-weight: 900;
-  max-width: 100vw;
+
+#spacers{
+  transform-style: preserve-3d;  /* << */
 }
 
 .spacers{
@@ -120,18 +101,46 @@ span {
   height: 10px;
   position: absolute;
   background-color: rgb(138, 8, 245);
-
 }
 
 .swimmer{
+  position: absolute;
   width: 141vmax;
   height: 141vmax;
-  position: fixed;
   border-radius: 100vmax;
-  /* transform: translate3d(0,0,0); */
+  transform: translate3d(-50%,-50%,0);
   left: 50%;
   top: 50%;
-  transform: scale(0.5);
+  /* transform: scale(0.5); */
   transform-origin: 0 0;
 }
 
+#text{
+  position: absolute;/* << */
+  transform-style: preserve-3d;/* << */
+  color: rgb(26, 21, 4);
+  font-size: 12.5vmin; /* 100vmin / max chars per word */
+  font-family: "Serif";
+  font-weight: 900;
+  /* transform: translate3d(-50%,-50%,-9vw); */
+}
+
+#text span{
+  position: absolute;  /* << */
+  transform-origin: 0 0;  /* << */
+  /* background-color: hsla(354, 74%, 42%, 0.5); */
+}
+
+span#eme{
+  font-size:12.5vmin;
+  font-family: "Serif";
+  /* background-color: royalblue; */
+  display: flex;  /* << */
+  position: absolute;  /* << */
+  transform-origin: 0 0;  /* << */
+}
+
+span#eme >span{
+  display: block;
+  position: relative;
+}
