--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,7 @@ body {
   position: relative;
   background-color: #333;
   height: 100%;
+  font-family: "Open Sans","Helvetica","Arial",sans-serif;
 }
 
 #container {
@@ -105,14 +106,23 @@ body {
 
 .swimmer{
   position: absolute;
-  width: 141vmax;
-  height: 141vmax;
-  border-radius: 100vmax;
   transform: translate3d(-50%,-50%,0);
   left: 50%;
   top: 50%;
+
+  width:100%;
+  height: 100%;
   /* transform: scale(0.5); */
   transform-origin: 0 0;
+}
+
+.circDiv{
+  width: 141vmax;
+  height: 141vmax;
+  border-radius: 100vmax;
+}
+.fg{
+
 }
 
 #text{
@@ -132,12 +142,18 @@ body {
 }
 
 span#eme{
-  font-size:12.5vmin;
-  font-family: "Serif";
   /* background-color: royalblue; */
+  color:#fdd935;
   display: flex;  /* << */
   position: absolute;  /* << */
   transform-origin: 0 0;  /* << */
+  
+  
+  font-size:15vw;
+  font-family: "Serif";
+  font-weight: 800;
+  letter-spacing: -1.5vw;
+  text-transform: uppercase;
 }
 
 span#eme >span{
