--- a/src/styles/ui.css
+++ b/src/styles/ui.css
@@ -1,11 +1,11 @@
 #emailme{
     position: absolute;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 50px;
-    padding: 10px;
+    padding: 5px;
     text-transform: uppercase;
     font-size: 8px;
     font-family: 'LatoLatinWebMedium';
@@ -15,42 +15,66 @@
     color: #f9a825;
     background-color: #2f2f2f;
     text-decoration: none;
+    right: 10px;
+    top: 0;
   }
 
 #beta {
-    left: 0;
-    bottom: 40px;
+    left: 5px;
+    top: 5px;
     position: absolute;
     display: flex;
+    height: 30px;
+    width: auto;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    text-transform: uppercase;
-    font-size: 8px;
+    font-size: 14px;
     font-family: 'LatoLatinWebMedium';
     text-align: center;
     pointer-events: all;
     cursor: pointer;
     color: #f9a825;
   }
-  #emailme{
-    right: 10px;
-    top: 0;
-  }
-  #emailme *,
-  #beta *{
-    margin:5px;
-  }
 #emailme svg,
 #beta svg,
 #playPause svg{
     fill: #f9a825;
-    background-color: #424242;
+  }
+  .svgWrapper{
     border-radius: 999px;
+    background-color: #424242;
     padding: 5px;
+}
+#emailme .svgWrapper{
+    width: 30px;
+    height: auto;
+    margin-bottom: 5px;
+}
+#beta .svgWrapper{
+  width: 30px;
+    height: 100%;
+    margin-right: 5px;
+  }
+  #playPause .svgWrapper{
+    width: 30px;
+    height: 100%;
+    margin-right: 5px;
 }
 #beta p{
   color: #424242;
+}
+
+#playPause{
+  position: absolute;
+  bottom: 5px;
+  left: 5px;
+  width: 30px;
+  height: 30px;
+}
+#playPause[pause] svg{
+  fill: #bdbdbd;
+
 }
 
 #timeline{
@@ -65,22 +89,11 @@
 #time{
   position: absolute;
   left: 40px;
-font-family: 'LatoLatinWebHeavy';
+  font-family: 'LatoLatinWebHeavy';
   letter-spacing: 0.7rem;
   font-size: 0.7rem;
   bottom: 14px;
 }
-#playPause{
-  position: absolute;
-  bottom: 7px;
-  left: 7px;
-  width: 10px;
-
-}
-#playPause[pause] svg{
-  fill: #bdbdbd;
-}
-
 
 #scrolltainer{
   width: 100vw;
