--- a/src/styles/ui.css
+++ b/src/styles/ui.css
@@ -1,6 +1,6 @@
 #title {
   position: absolute;
-  font-size: 12px;
+  font-size: 4vmin;
   font-family: "LatoLatinWebLight";
   pointer-events: all;
   cursor: pointer;
